--- a/_p/velo/velo.html
+++ b/_p/velo/velo.html
@@ -8,11 +8,10 @@
 #Mycanvas{z-index: 1;  left: 25px; top: 60px; box-shadow:2px 2px 3px 0 #224422;}  
 #d0{position: fixed; width: 130px; height: 400px; left: 815px; top: 80px; font-family: "Courier New";
     font-size: 12px; box-shadow:0 0 3px 0 #222255;}
-#dset,#dcom{position: fixed; display: none;
-	width: 145px; height: 310px; left: 20px; top: 520px;
-	border: 1px solid black; box-shadow:0 0 6px 0 #222255;  background-color: rgb(240,240,250);
+#dset,#dcom{display: none; width: 145px; height: 310px; left: 20px; 
+  border: 1px solid black; box-shadow:0 0 6px 0 #222255;  background-color: rgb(240,240,250);
          font-family: "Courier New"; font-size: 12px; text-align: center;}
-#dcom{width: 340px;	left: 170px;}
+#dcom{position: absolute; width: 340px; left: 160px; top: 520px;}
 input[type='number']{ width: 60px; height: 20px}
 #im0{position: absolute; margin-top: 0px; z-index: 0; width: 160px; left: 390px; top: 260px;z-index: 3;}
 h3{font-size: 32px; margin-top: 10px; margin-left: 100px; color: green; text-shadow: 2px 2px 2px #000; }
@@ -50,7 +49,7 @@ p.v{text-align:center; font-family: "Courier New"; font-size: 16px; font-weight:
   <input type="checkbox" checked onclick="fb=!fb">Bear<br>
   <input type="checkbox" checked onclick="fw=!fw">Wolf<br>
   <input type="checkbox" checked onclick="ff=!ff">Fox<br>
-  <input type="checkbox" checked onclick="fp=!fp">Taddy<br>
+  <input type="checkbox" checked onclick="fp=!fp">Paddy<br>
 
 </div> 
  
