--- a/_p/velo/velo.html
+++ b/_p/velo/velo.html
@@ -27,7 +27,7 @@ p.v{text-align:center; font-family: "Courier New"; font-size: 16px; font-weight:
 <body>
 <h3>Barboss on the monocycle</h3>		
 
-<img id="im0" src="b&s2.gif">	
+<img id="im0" src="b&s2.GIF">	
  
 <canvas id="Mycanvas" width="800" height="400">Обновите браузер</canvas><br>
 
