--- a/puzzles/ana/index_a.html
+++ b/puzzles/ana/index_a.html
@@ -42,14 +42,12 @@
   <div class="column">
     <h5>Pictires</h5>
     <p><a href="slider/slider.html">SLIDER</a></p>
+    <p><a href="/_p/velo/velo1.html">Motorcycle</a> </p>   
     
   </div>
   <div class="column">
     <h5>Other</h5>
   </div>
-
 </div>
-
-
 </body>
 </html>
