--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       #i2{width: 16%}  
       #i3{width: 16%;}   
       #i4{width: 14%; transform:rotate(10deg);}  
-      #i5{width: 12%; transform:rotate(20deg);}  
-      
+      #i5{width: 12%; transform:rotate(20deg);}        
     </style>    
 </head>
 <body>
@@ -44,7 +43,6 @@
     <p><a href="_p/_bt/Bill_01.html">Биллиард</a> </p>
     <p><a href="_p/velo/velo.html">Monocycle</a> </p>
     <p><a href="puzzles/spiralSquare.html">Spiral Square</a> </p>
-
 <p><a href="_p/Ball%20without%20Barboss.html">Ball without Barboss</a></p>
     <p><a href="puzzles/Puzzle_00.html">Puzzle_00</a></p>
     <p><a href="_p/line_r.html">Line_R</a></p>
@@ -67,6 +65,8 @@
     <p><a href="puzzles/galina/pict/index_g.html">Wife Galina</a></p>
     <p><a href="puzzles/ana/index_a.html">Daughter Anastasiia</a></p>
     <p><a href="puzzles/nick/index_n.html">Grandson Nicky</a></p>
+    <p><a href="_p/velo/velo1.html">Motorcycle</a> </p>
+      
   </div>
 </div>
 
