--- a/puzzles/galina/pict/index_g.html
+++ b/puzzles/galina/pict/index_g.html
@@ -25,9 +25,7 @@
 </head>
 <body>
     <h1>Галина Гриценко</h1>
- <!--    <img  src="g01.JPG" id="i0"> -->
     <img  src="g000.jpg" id="i1">
-    <!-- <img  src="g02.JPG" id="i2"> -->
 
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
@@ -36,6 +34,7 @@
   <div class="column">
     <h5>Pictires</h5>
     <p><a href="slider.html">SLIDER</a></p>
+    <p><a href="../space.html">Space v.1</a></p>
     
   </div>
   <div class="column">
