--- a/puzzles/galina/pict/index_g.html
+++ b/puzzles/galina/pict/index_g.html
@@ -35,6 +35,7 @@
     <h5>Pictires</h5>
     <p><a href="slider.html">SLIDER</a></p>
     <p><a href="../space.html">Space v.1</a></p>
+    <p><a href="../sky.html">Sky v.0</a></p>
     
   </div>
   <div class="column">
