--- a/puzzles/spiralSquare.html
+++ b/puzzles/spiralSquare.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/sirano.ico" type="image/x-icon">	
 <title>SpiralSquare01</title>
 </head>
 <body>
