--- a/puzzles/galina/pict/index_g.html
+++ b/puzzles/galina/pict/index_g.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/sirano.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Михаил Иванович</title>
+    <title>ГАЛИНА</title>
    <style>
     * {  box-sizing: border-box; }   
    .column {
