--- a/puzzles/nick/ball.html
+++ b/puzzles/nick/ball.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/sirano.ico" type="image/x-icon">
     <title>Ball with BarbossG</title>
     <style>
 #im0 {
