--- a/puzzles/nick/puzzle.html
+++ b/puzzles/nick/puzzle.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/sirano.ico" type="image/x-icon"> 
 <title>Puzzle_Git</title>
 </head>
 <body>
