--- a/puzzles/nick/pict/slider.html
+++ b/puzzles/nick/pict/slider.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/sirano.ico" type="image/x-icon">
       <title>_SLIDER_</title>
     <style> 
    body{background-color: rgb(0,0,50); text-align: center; font-family: 'Courier New'; color: white}   
