--- a/puzzles/nick/_tb0/_tb1.html
+++ b/puzzles/nick/_tb0/_tb1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
       <title>_BearVideoGH_00</title>
-  <link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/mi1.ico" type="image/x-icon">
+  <link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/sirano.ico" type="image/x-icon">
     <style> 
     body{margin: 0vw}  
     div{ width: 11vw; height: 350px;
