Update Ball without Barboss.html

--- a/_p/Ball without Barboss.html
+++ b/_p/Ball without Barboss.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="windows-1251">
+    <link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/sirano.ico" type="image/x-icon">
     <title>Ball without Barboss</title>
     <style>
 #d0 {
