--- a/_p/bears&b51.html
+++ b/_p/bears&b51.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head> <meta charset="UTF-8" >
+    <link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/sirano.ico" type="image/x-icon">
     <title>Show Bears 03</title>
 <style>
 
