--- a/_p/graphPref21.html
+++ b/_p/graphPref21.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>graphPref21</title>
- <link rel="icon" href="../ICO/ml00.ico" type="image/x-icon">
+ <link rel="icon" href="../ICO/sirano.ico" type="image/x-icon">
 </head>
 <style> 
 body {font-family: 'Courier New'; font-size: 18px; font-weight: bold;}	
