--- a/_p/torus.html
+++ b/_p/torus.html
@@ -2,6 +2,7 @@
 <html>
  <head>
     <meta charset="UTF-8">
+  <link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/sirano.ico" type="image/x-icon">
     <title>Tor03</title>
     <style>  
      #myCanvas{cursor: pointer;}
