--- a/puzzles/ana/index_a.html
+++ b/puzzles/ana/index_a.html
@@ -33,6 +33,9 @@
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
     <h5>Programs</h5>
+    <p><a href="_Circle00.html">Circles</a><br></p>
+    <p><a href="_Spirale00.html">Spirale</a><br></p>
+    <p><a href="_VerLine00.html">Row of lines</a><br></p>
     <p><a href="puzzlet.html">PUZZLE</a><br>Можно ctr+V вставить другую картинку</p>
     <p><a href="../bajan/flag1.html">FLAG</a><br></p>
     <p><a href="../nick/_tb0/_tb.html">Theater&Billiard</a></p>
