--- a/puzzles/ana/_Spirale00.html
+++ b/puzzles/ana/_Spirale00.html
@@ -2,6 +2,7 @@
 <html>
  <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="../ICO/sirano.ico" type="image/x-icon">
     <title>_Spyrale00</title>
     <style>  
      #myCanvas{cursor: pointer; border-radius: 300px}
