--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <div class="column" >
     <h5>Programs</h5> 
     <p><a href="puzzles/flag/flag1.html">flag</a> </p>
+    <p><a href="_p/Fig_00.html">Figures</a> </p>
     <p><a href="_p/torus.html">Torus</a> </p>
     <p><a href="_p/pref21.html">Preferance</a> </p>
     <p><a href="_p/_bt/Bill_01.html">Биллиард</a> </p>
