--- a/_p/Fig_00.html
+++ b/_p/Fig_00.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/sirano.ico" type="image/x-icon">	
+<link rel="icon" href="https://www.mihailivanovich.com/puzzles/ICO/murr.ico" type="image/x-icon">	
 <title>Fig_00</title>
 </head>
 <body>
