--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
     <h5>Programs</h5> 
+    <p><a href="index21.html">Programs 2021</a> </p>
     <p><a href="puzzles/flag/flag1.html">flag</a> </p>
     <p><a href="_p/Fig_00.html">Figures</a> </p>
     <p><a href="_p/torus.html">Torus</a> </p>
     <p><a href="_p/pref21.html">Preferance</a> </p>
-    <p><a href="_p/_bt/Bill_01.html">Биллиард</a> </p>
+    <p><a href="_p/_bt/Bill_01.html">Карусель зверов</a> </p>
     <p><a href="_p/velo/velo.html">Monocycle</a> </p>
     <p><a href="puzzles/spiralSquare.html">Spiral Square</a> </p>
-<p><a href="_p/Ball%20without%20Barboss.html">Ball without Barboss</a></p>
-    <p><a href="puzzles/Puzzle_00.html">Puzzle_00</a></p>
-    <p><a href="_p/line_r.html">Line_R</a></p>
+    <p><a href="_p/Ball%20without%20Barboss.html">Ball without Barboss</a></p>
+    <p><a href="puzzles/Puzzle_00.html">Puzzle_00</a></p>    
     <p><a href="puzzles/js-gausst/tableGauss.html">Table Gauss</a></p>  
   </div>
   <div class="column">
