--- a/p21/transform.html
+++ b/p21/transform.html
@@ -47,7 +47,7 @@ zz1[0][0] = 0;  zz1[1][0] = 0;   zz1[0][1] = 0;  zz1[1][1] =  0;
     var myC1=document.getElementById("myCanvas");
     var x1=myC1.getContext("2d");
   var img2=new Image();  // Создаём изображение
-  img2.src = "22/Pict_Zv/11.JPG";
+  img2.src = "22/Pict_Zv/11.jpg";
   let W=200;let H=20;
   img2.onload = function() { 
   W=this.width;  H = this.height; //для пробы
