--- a/index21.html
+++ b/index21.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MenuProgr</title>
+  <title>MenuPrograms</title>
     <link rel="icon" href="puzzles/ICO/sirano.ico" type="image/x-icon">
  <style>
  * {  box-sizing: border-box; }   
